tests/invalid/error-syntax.brandejs
x= 5;
; if is incorrectly formated, should throw an error
if(x=5){
    x=6
}